Gaps in the underline don't align right when an emoji is placed in the text
Categories
(Core :: Layout: Text and Fonts, defect, P2)
Tracking
()
People
(Reporter: karlcow, Assigned: jfkthame)
References
()
Details
Attachments
(3 files)
As said in https://codepen.io/remco_dekker/pen/abOZyQK
Gaps in the underline don't align right when an emoji is placed in the text.
This seems to only be a problem in Firefox on macOS.
Assignee | ||
Comment 1•6 years ago
|
||
Updated•6 years ago
|
Assignee | ||
Comment 2•6 years ago
|
||
This is a sufficiently bad visual glitch that I think we may want to consider uplifting it to 74.
Assignee | ||
Comment 4•6 years ago
|
||
Comment on attachment 9128453 [details]
Bug 1617515 - Properly advance current position for glyph runs where we don't implement ink-skipping. r=dholbert
Beta/Release Uplift Approval Request
- User impact if declined: Potential for bad underline rendering when emoji present
- Is this code covered by automated tests?: Yes
- Has the fix been verified in Nightly?: No
- Needs manual test from QE?: No
- If yes, steps to reproduce: See codepen in comment 0.
(Reftest is included with patch, just pushed to autoland.) - List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): Trivial patch, just updates position when we step past a glyph run
- String changes made/needed:
Comment 5•6 years ago
|
||
Comment on attachment 9128453 [details]
Bug 1617515 - Properly advance current position for glyph runs where we don't implement ink-skipping. r=dholbert
Low risk patch, covered by tests, uplift approved for 74.0b8, thanks.
Updated•6 years ago
|
Comment 6•6 years ago
|
||
bugherder |
Comment 7•6 years ago
|
||
Unable to uplift - conflicts while merging layout/painting/nsCSSRendering.cpp.
Assignee | ||
Comment 8•6 years ago
|
||
Updated•6 years ago
|
Assignee | ||
Comment 9•6 years ago
|
||
I posted a rebased patch (https://phabricator.services.mozilla.com/D64326) for mozilla-beta, but don't know how to make phabricator land it there. (Shouldn't need re-review or anything; the only merge conflict was in comments around one of the changes, not affecting the actual code change.)
![]() |
||
Comment 10•6 years ago
|
||
bugherder uplift |
![]() |
||
Comment 11•6 years ago
|
||
Thanks. Phabricator doesn't handle uplifts yet.
Comment 12•6 years ago
|
||
Backed out changeset ff7d83d22698 (bug 1617515) for multiple reftest failures on layout/reftests/bugs/1617515-1.html
Push that started the failures: https://treeherder.mozilla.org/#/jobs?repo=mozilla-beta&resultStatus=superseded%2Ctestfailed%2Cbusted%2Cexception%2Crunnable&revision=ff7d83d2269814adad427c91dab3e8620d1a959e&selectedJob=290538605
Failure log: https://treeherder.mozilla.org/logviewer.html#/jobs?job_id=290538605&repo=mozilla-beta&lineNumber=11480
Backout: https://hg.mozilla.org/releases/mozilla-beta/rev/002bb48bab1c3319e3723cddec6b92eb8cec6c1b
Updated•6 years ago
|
Updated•6 years ago
|
Updated•6 years ago
|
Assignee | ||
Comment 13•6 years ago
|
||
(In reply to Oana Pop-Rus from comment #12)
Backed out changeset ff7d83d22698 (bug 1617515) for multiple reftest failures on layout/reftests/bugs/1617515-1.html
Argh - sorry, my bad - the beta patch didn't actually include the reftest files. Mercurial user error!
I've updated the revision on phabricator, should be OK now. At least, it shows the added files when I view it in phab.
Assignee | ||
Updated•6 years ago
|
![]() |
||
Comment 14•6 years ago
|
||
bugherder uplift |
Description
•