Bug 1617515 - Properly advance current position for glyph runs where we don't implement ink-skipping. r=dholbert

Differential Revision: https://phabricator.services.mozilla.com/D63828

--HG--
extra : moz-landing-system : lando